TRABALHO SEGUNDO BIMESTRE

--- a/index.html
+++ b/index.html
@@ -42,12 +42,71 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-danger" type="submit">Search</button>
+                    <input class="form-control me-2 text-white" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-white type=" submit ">Search</button>
                 </form>
             </div>
         </div>
     </nav>
+    <center><img class="img-fluid " src="https://www.eteclins.com.br/2021/assets/images/etec15anos.png " alt="Etec Lins "></center>
+<br>
+<br>
+<br>
+   <h1><center>#ULTIMAS NOTICIA</center></h1> 
+   <br>
+   <br>
+   <br>
+   <br>
+
+   
+   <div class="container-fluid ">
+    <div class="row mt-3 ">
+        <div class="col-12 col-sm-4 col-md-4 ">
+            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
+
+        </div>
+
+        <div class="col-12 col-sm-8 col-md-8 ">
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row mt-3 ">
+        <div class="col-12 col-sm-4 col-md-4 ">
+            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
+
+        </div>
+        <br>
+        <br>
+        <div class="col-12 col-sm-8 col-md-8 ">
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row mt-3 ">
+        <div class="col-12 col-sm-4 col-md-4 ">
+          <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
+        </div>
+        <div class="col-12 col-sm-8 col-md-8 ">
+        </div>
+    </div>
+</div>
+</div>
+<br>
+<br>
+<br>
+<div class="col-12 col-sm7 col-md-7 ">
+<div class="container-fluid ">
+    <div class="row ">
+        <div class="col-12 col-sm-5 col-md-5 ">
+            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
+        </div>
+
+
+
+
 </body>
 
 </html>
