--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>Portal Etec</title>
 </head>
 
@@ -48,65 +49,76 @@
             </div>
         </div>
     </nav>
-    <center><img class="img-fluid " src="https://www.eteclins.com.br/2021/assets/images/etec15anos.png " alt="Etec Lins "></center>
-<br>
-<br>
-<br>
-   <h1><center>#ULTIMAS NOTICIA</center></h1> 
-   <br>
-   <br>
-   <br>
-   <br>
-
-   
-   <div class="container-fluid ">
-    <div class="row mt-3 ">
-        <div class="col-12 col-sm-4 col-md-4 ">
-            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
-
-        </div>
-
-        <div class="col-12 col-sm-8 col-md-8 ">
-        </div>
+    <br>
+    <br>
+    <br>
+    <div class="fundoo ">
+   <center><img class="img-fluid " src="https://etec-news.webnode.com/_files/200000001-eb277ed1aa/50000000.png?ph=09e171e6ba " alt=" "> </center>
     </div>
-    <br>
-    <br>
-    <div class="row mt-3 ">
-        <div class="col-12 col-sm-4 col-md-4 ">
-            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
 
-        </div>
-        <br>
-        <br>
-        <div class="col-12 col-sm-8 col-md-8 ">
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="row mt-3 ">
-        <div class="col-12 col-sm-4 col-md-4 ">
-          <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
-        </div>
-        <div class="col-12 col-sm-8 col-md-8 ">
-        </div>
-    </div>
 </div>
-</div>
-<br>
-<br>
-<br>
-<div class="col-12 col-sm7 col-md-7 ">
-<div class="container-fluid ">
+
     <div class="row ">
-        <div class="col-12 col-sm-5 col-md-5 ">
-            <center> <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" "> </center>
+            <div class="col-12 col-sm-5 col-md-5 ">
+                <div class="container-fluid ">
+                    <div class="row mt3 ">
+                        <div class="col-12 col-sm-4 col-md-4 ">
+                            <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" ">
+                            <h5>noticia</h5>
+                        </div>
+                        <div class="col-12 col-sm-8 col-md-8 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et earum fugit maxime laboriosam sapiente cupiditate totam debitis, aliquam tenetur illum impedit unde ad! Numquam, velit dolorem. Impedit, id quam. Cum quae illo
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row mt3 ">
+                        <div class="col-12 col-sm-4 col-md-4 ">
+                            <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" ">
+                            <h5>noticia</h5>
+                        </div>
+                        <div class="col-12 col-sm-8 col-md-8 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et earum fugit maxime laboriosam sapiente cupiditate totam debitis, aliquam tenetur illum impedit unde ad! Numquam, velit dolorem. Impedit, id quam. Cum quae illo
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row mt3 ">
+                        <div class="col-12 col-sm-4 col-md-4 ">
+                            <img class="img-fluid " src="https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG " alt=" ">
+                            <h5>noticia</h5>
+                        </div>
+                        <div class="col-12 col-sm-8 col-md-8 ">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae et earum fugit maxime laboriosam sapiente cupiditate totam debitis, aliquam tenetur illum impedit unde ad! Numquam, velit dolorem. Impedit, id quam. Cum quae illo
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 ">
+                <div class="container-fluid ">
+                    <div class="row ">
+                        <div class="col-12 col-sm-5 col-md-5 ">
+                            <img class="img-fluid " src= "https://upload.wikimedia.org/wikipedia/pt/e/ef/Khorus_-_A_Noticia.JPG "  alt=" "><span>principal</span>
+
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, impedit a est qui soluta quae facilis, aspernatur et consequuntur nulla unde. Laborum laboriosam eos corporis corrupti maxime recusandae quaerat ab! Lorem ipsum dolor
+                            sit amet consectetur adipisicing elit. Officiis, aliquid. Doloremque necessitatibus hic qui eaque similique tempora reiciendis, officiis placeat? Ipsa cupiditate qui eligendi earum rerum. Ut nemo in cupiditate. Lorem ipsum
+                            dolor sit amet consectetur adipisicing elit. Ut voluptatibus facere illo dolorum! Quaerat nostrum cumque reprehenderit, vel accusantium consectetur explicabo? Tempora obcaecati quas consectetur veritatis quibusdam cumque! Voluptates,
+                            neque!
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+
+  
+  
 
 
-
-
+    <script src="js/jquery-3.6.0.min.js "></script>
+    <script src="js/bootstrap.js "></script>
+    
 </body>
 
 </html>
